styles.css
body {
    margin : 0;
    background: var(--body-bg-color);
    --body-bg-color: #eeedf0;
    text-align: center; 
}

img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 60%;
}



.logo {
  background : linear-gradient(var(--logo-bg-color), var(--body-bg-color));

    --logo-bg-color: hsla(189, 48%, 61%, 0.807);
    opacity: 1;
    border-top: 0;
    font: 290%/1.6 georgian;
    padding-bottom: 10;
    a:link { 
      color: #000000;
      text-decoration: none; 
    } 
}

.intro {
    margin: 5%;
}

.nav {
    
    padding-top: 0%;
    font: 150%/1.5 serif;
}

.semibold {
    font-size: x-large;
}

h5 {
    font-size: large
}

.projects-list {
    border-color: #0c73e9;
}

  a:link { 
    color: #000000;
    text-decoration: none; 
  }
 
  a:visited { 
    color: #7b2dc4;
    text-decoration: none; 
  } 
  a:hover {
    color: #7b2dc4;
    text-decoration: none; 
  } 
  a:active { 
    text-decoration: none; 
  }

